Add txt saving functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<img src="img/placeholder.png", id="uploaded-img">
 	<input type="file" name="upload" accept="image/jpeg", id="current-input"><br>
 	<label for="img-size">Size of ASCII art (in characters):</label>
-	<input type="text" id="img-size" value="100">
+	<input type="text" id="img-size" value="100"><br>
+
+	<label for="download-txt">Download txt</label>
+	<input type="checkbox" id="download-txt"><br>
 
 	<div id="ascii" class="ascii"></div>
 
