--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Test</title>
+	<title>ASCII Art Generator</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
